--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </div>
     <div>
         <center><h1>Présentation</h1>
-        <h4>Je suis Tharindu Perera, étudiant en BUT Informatique à Sorbonne Paris Nord. J’ai choisi ce parcours pour développer mes compétences en développement web, gestion de bases de données et programmation logicielle.
+        <h4>Je suis Tharindu Perera, étudiant en BUT Informatique à Sorbonne Paris Nord. J’avais choisi ce parcours pour développer mes compétences en développement web, gestion de bases de données et programmation logicielle.
         Mon expérience en développement d’applications, en Big Data et mes stages en entreprise m'ont permis de renforcer mes compétences techniques et ma capacité à travailler en équipe.
         À terme, je souhaite évoluer vers un poste en tant que data scientist, tout en continuant à apprendre et à m’adapter aux nouvelles technologies.
         </h4></center>
@@ -144,7 +144,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 Tharindu Perera - Tous droits réservés.</p>
+        <p>&copy; 2025 Tharindu Perera - Tous droits réservés.</p>
     </footer>
 
     <script>
